# chromium-ppc64le

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  README.md  RPM-GPG-KEY-chromium-ppc64le  build.sh  chromium-ppc64le.repo  create-github-release.pl  filelist2html.sh  libgnome-keyring-3.12.0-15.el8.ppc64le.rpm  libgnome-keyring-devel-3.12.0-15.el8.ppc64le.rpm  release-json-template.mk  update-readme-ed-template.mk
docker-root/: Makefile  Yarn.patch  args.gn.in  chromium.mk  common.mk  llvm-lrint.patch
docker-root/conf/: args.gn.in  ungoogled_extra.gn
docker-root/patches/chrome/: 0001-Add-PPC64-support-for-libdav1d.patch  0001-Fix-clang-compilation-of-libdav1d.patch  0001-Fix-libdav1d-compilation-on-clang-ppc.patch  0001-remove-unused-vars-in-gn.patch  Revert-Vulkan-Disable-global-merge-for-volk.patch  change-user-agent.patch  disable-chrome-pgo-phase.patch  enable-rpm-build-ungoogled-chromium.patch  enable-rpm-build.patch  enable-vaapi.patch  ffmpeg-ccache.patch  fix-ppc64-linux-syscalls-headers.patch  fix-swiftshader-link.patch  gl-bug-workaround.patch  overlay-scrollbars.patch  ppc64le-branding.patch  remove-unused-preferences-fields-chrome-80.0.3987.122.patch  rename-skia-pause.patch  series  series.extra  series.ungoogled  skia-vsx-instructions.patch  ungoogled-chromium-branding.patch  ungoogled-chromium-profile.patch
docker-root/patches/llvm/: 0001-PowerPC-Do-not-emit-HW-loop-if-the-body-contains-cal.patch  fix-altivec.patch  series
